[BACKLOG-18129] fix for text wrapping in linux (#4598)

--- a/plugins/file-open-save/core/src/main/javascript/app/components/error/error.css
+++ b/plugins/file-open-save/core/src/main/javascript/app/components/error/error.css
@@ -56,7 +56,7 @@ error .errorMiddle {
   overflow: hidden;
 }
 
-error .errorMiddleTopBefore {
+error .errorMiddleTopBefore.breakAll {
   word-break: break-all;
 }
 
